--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0"
