--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
@@ -14,16 +15,17 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.4.4",
     "@react-three/fiber": "^9.2.0",
-    "@react-three/postprocessing": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "flowbite-react": "^0.11.9",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-responsive": "^10.0.1",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0"
